fixed nav links on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -389,8 +389,8 @@ footer a {
 }
 
 nav {
-  margin-top: -152px;
-  margin-top: -9.5rem;
+  margin-top: -112px;
+  margin-top: -7rem;
   -webkit-backface-visibility: hidden;
   -webkit-transition: margin 0.5s;
   transition: margin 0.5s;
@@ -587,8 +587,8 @@ header .logo {
   text-align: left;
   margin-left: 16px;
   margin-left: 1rem;
-  margin-top: -65.6px;
-  margin-top: -4.1rem;
+  margin-top: -84.8px;
+  margin-top: -5.3rem;
 }
 
 header[min-width~="390px"] .logo,
